--- a/style.css
+++ b/style.css
@@ -15,15 +15,16 @@ body{
 body{
     background-color: #ff0;
 }
-
+}
 /* Smartphone Lanscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 @media (min-width: 992px){
 body{
     background-color: #f60;
 }
-
+}
 /* PC >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 @media (min-width: 1200px){
 body{
     background-color: #f00;
+}
 }
