--- a/style.css
+++ b/style.css
@@ -34,7 +34,15 @@ body{
    
 
 }
-
+.Botao{
+        text-decoration: none;
+        color: #fff;
+        font-size: 700;
+        background-color:#c00000;
+        padding: 10px 40px;
+        border: 2px solid #ffff;
+        border-radius: 25px;
+}
 /* Topo do Site */
 
 #topo{
@@ -92,6 +100,27 @@ nav ul li a{
     text-decoration: none;
     color:aliceblue
 }   
+
+/* Destaque */
+
+main{
+    height: 75vh;
+    background: url(img/banner.jpg);
+    background-size: cover;
+    color: #fff;
+}
+
+main h1{
+    font-size: 2.5em;
+
+
+}
+
+main h2{
+    font-size: 1em;
+    margin: 20px 0px 50px 0px;
+
+}
 
 /* Smartphone Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 @media (min-width: 576px){
